# molecular_visualizer

./: .flake8  .gitignore  .pylintrc  README.md  main.py  pyproject.toml
examples/: glikoliz.smi  middle_mols.smi  middle_names.smi  simple_mols.smi  tstk.smi
notebooks/: draw_moleculs.ipynb
src/: generate_img.py  generate_property.py  mainApp.py  processing.py
src/widgets/: propertyWidget.py  settingWidget.py
