[tool.poetry]
name = "molecular-visualizer"
version = "0.1.0"
description = ""
authors = ["blogerlu <a.v.vlasov2003@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
rdkit = "^2023.9.2"
pyqt6 = "6.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
flake8 = "^6.1.0"
black = "^23.11.0"
wemake-python-styleguide = "^0.18.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
